--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -26,7 +26,7 @@
 <div class="navbar">
     <div class="menu">
         <ul>
-            <li class="item"><a routerLink="men">Men</a></li>
+            <li class="item"><a routerLink="men">Mens</a></li>
             <li class="item"><a routerLink="women">Women</a></li>
             <li class="item"><a routerLink="/cart">Cart</a></li>
             <li class="item"><a routerLink="/profile">User profile</a></li>
