--- a/src/app/pages/admin/side-navbar/side-navbar.component.html
+++ b/src/app/pages/admin/side-navbar/side-navbar.component.html
@@ -1,5 +1,5 @@
-<mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+<mat-drawer-container class="example-container" autosize >
+  <mat-drawer #drawer class="example-sidenav" mode="side" opened>
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
       <!-- This is the tree node template for leaf nodes -->
       <mat-tree-node routerLink="{{node.link}}" *matTreeNodeDef="let node" matTreeNodePadding>
