--- a/src/app/pages/user/login/login.component.html
+++ b/src/app/pages/user/login/login.component.html
@@ -8,4 +8,5 @@
         <input matInput formControlName="password" type="password">
     </mat-form-field>
     <button type="submit">Login</button>
+    <div class="create" routerLink="/registration">Create an Account</div>
 </form>
