--- a/src/app/pages/admin/product/add-product/product.component.css
+++ b/src/app/pages/admin/product/add-product/product.component.css
@@ -2,6 +2,7 @@ form{
     margin: auto;
     border: 1px black solid;
     padding: 15px;
+    width: 500px;
 }
 .mat-form-field, label{
     width: 100%;
