--- a/src/app/pages/admin/product/add-product/product.component.html
+++ b/src/app/pages/admin/product/add-product/product.component.html
@@ -1,9 +1,17 @@
+
+    <div class="left">
+        <button mat-raised-button color="primary" (click)="openComponentDialog(folders)">
+          <mat-icon>add</mat-icon>
+          Upload Images
+        </button>
+    
+        <button *ngIf="selectedImages && selectedImages.length > 0" mat-raised-button color="warn"
+                (click)="deselectAll()">
+          <mat-icon>remove_circle_outline</mat-icon>
+          Clear All
+        </button>
+      </div>
 <form [formGroup]="dataForm" (ngSubmit)="onSubmitForm()" autocomplete="off">
-    <div>
-        <label for="image">Product Image : </label>
-        <input class="imageInput" type="file" name="image" (change)="fileChangeEvent($event)" accept="image/*">
-        <img class="productImage" [src]="imgPlaceHolder" />
-    </div>
     <div>
         <mat-form-field>
             <mat-label for="name">Name </mat-label>
