--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -24,7 +24,7 @@
               <mat-icon>add</mat-icon>
             </button>
             <button (click)="subtractQty(data._id)" mat-mini-fab color="accent" style="margin-left: 4px;">
-              <mat-icon>-</mat-icon>
+              <i class="fas fa-minus"></i>
             </button>
             <button mat-mini-fab color="warn" style="margin-left: 4px;" (click)="openConfirmDialog(data._id)">
               <mat-icon>delete</mat-icon>
