--- a/src/app/pages/home/card/card.component.html
+++ b/src/app/pages/home/card/card.component.html
@@ -5,7 +5,6 @@
             <mat-card-subtitle>Price: {{product.price}} BDT</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <button mat-button>Add to Cart</button>
-            <button mat-button>SHARE</button>
+            <!-- <button mat-button (click)="addToCart()">Add to Cart</button> -->
         </mat-card-actions>
     </mat-card>
