--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,11 +1,11 @@
-
-
-
 .cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin: auto;
+    width: 100%;
 }
 .pagination{
+    text-align: center;
     margin: auto;
 }
