--- a/src/app/pages/product-details/product-details.component.css
+++ b/src/app/pages/product-details/product-details.component.css
@@ -16,10 +16,9 @@ h3{
 img{
     height: 400px;
 }
-button{
-    background-color: #004516;
-    color: white;
-    margin-right: 5px;
-    font-size: 15px;
-    padding: 10px 20px 10px 20px;
+button:hover{
+    background-color: white;
+    color: var(--primary-color);
+    border: 2px solid var(--primary-color);
 }
+
